--- a/npcs/Aur_Salleek.yaml
+++ b/npcs/Aur_Salleek.yaml
@@ -485,8 +485,9 @@ npc:
          - Can use Dexterity instead of Strength for the attack and damage rolls for unarmed strikes and monk weapons
          - Can roll a d6 in place of normal damage for unarmed strikes and monk weapons
          - When using an attack action with an unarmed strike or monk weapon, can make an unarmed strike as a bonus action
-        Ki: 5 Ki Points, Ki DC=15
-        - Flurry of Blows: Immediately after and attack action, can spend 1 Ki point to make 2 unarmed strikes as a bonus action
+        Ki:
+        - Description: 5 Ki Points, Ki DC=15
+          Flurry of Blows: Immediately after and attack action, can spend 1 Ki point to make 2 unarmed strikes as a bonus action
           Patient Defense: Can spend 1 Ki point to take the Dodge action as a bonus action
           Step of the Wind:Can spend 1 Ki point to take the Disengage or d=Dash action as a bonus action. Jump distance is doubled for the turn
         Unarmored Movement: Speed is increased by 25. Can move along vertical surfaces and across liquids without falling during the move 
