--- a/npcs/Babita.yaml
+++ b/npcs/Babita.yaml
@@ -508,7 +508,17 @@ npc:
     #
     personality: |
       Expressive eyebrows; long black lustrous hair; She somehow makes dwarvish chainmail slinky
-  
+  #
+  # Content that does not get displayed, but could be useful
+  # to humans.  Includes review comments, notes about what to
+  # do for the NPC art, or whatever else we need.
+  #
+  # Optional.
+  #
+  uncategorized:
+  - uncategorized_template_1: TEMPLATE
+  - uncategorized_template_2: TEMPLATE
+  - uncategorized_template_3: TEMPLATE
 ---
 
 #
