--- a/npcs/baruvo.yaml
+++ b/npcs/baruvo.yaml
@@ -464,37 +464,38 @@ npc:
   #
   specialties:
     skills:
-   - - Centaur Abilities:
-       - Fey: creature type is fey, rather than humanoid.           
-       - Charge: If he move at least 30 feet straight toward a target and then hit it with a melee weapon attack on the same turn, he can immediately follow that attack with a bonus action, making one attack against the 
+    - Centaur Abilities:
+      - Fey: creature type is fey, rather than humanoid.           
+        Charge: If he move at least 30 feet straight toward a target and then hit it with a melee weapon attack on the same turn, he can immediately follow that attack with a bonus action, making one attack against the 
                  target with his hooves.
-       - Hooves: His hooves are natural melee weapons, which can make unarmed strikes. If he hits with them, he deals bludgeoning damage equal to ld4 + his Strength modifier, instead of the bludgeoning damage normal for 
+         Hooves: His hooves are natural melee weapons, which can make unarmed strikes. If he hits with them, he deals bludgeoning damage equal to ld4 + his Strength modifier, instead of the bludgeoning damage normal for 
                  an unarmed strike
-       - Equine Build: He counts as one size larger when determining his carrying capacity and the weight he can push or drag. In addition, any climb that requires hands and feet is especially difficult for him because of 
+         Equine Build: He counts as one size larger when determining his carrying capacity and the weight he can push or drag. In addition, any climb that requires hands and feet is especially difficult for him because of 
                        his equine legs. When he make such a climb, each foot of movement costs him 4 extra feet, instead of the normal 1 extra foot
-       - Survivor: Proficiency in Survival           
+         Survivor: Proficiency in Survival           
     
-   - - Fighter Abilities:
-       - Fighting Style: Archery - gains a +2 bonus to Attack Rolls made with Ranged Weapons
-       - Second Wind: Bonus Action to regain 1d10 + 5
-       - Action Surge: Once every short/long rest can take an extra action
-       - Extra Attack: Can attack twice each turn
+    - Fighter Abilities:
+      - Fighting Style: Archery - gains a +2 bonus to Attack Rolls made with Ranged Weapons
+        Second Wind: Bonus Action to regain 1d10 + 5
+        Action Surge: Once every short/long rest can take an extra action
+        Extra Attack: Can attack twice each turn
  
-   - - Arcane Archer Abilities:
-       - Arcane Archer Lore: Proficient in Nature and knows the Druidcraft cantrip
-       - Arcane Shot: Knows 3 Arcane Shots
-         - Seeking Arrow: Using divination magic, you grant your arrow the ability to seek out your target, allowing the arrow to curve and twist its path in search of its prey. When you use this option, you don’t make an 
+    - Arcane Archer Abilities:
+      - Arcane Archer Lore: Proficient in Nature and knows the Druidcraft cantrip
+        Arcane Shot: 
+        - Description: Knows 3 Arcane Shots
+          Seeking Arrow: Using divination magic, you grant your arrow the ability to seek out your target, allowing the arrow to curve and twist its path in search of its prey. When you use this option, you don’t make an 
                           attack roll for the attack. Instead, choose one creature you have seen in the past minute. The arrow flies toward that creature, moving around corners if necessary and ignoring three-quarters cover 
                           and half cover. If the target is within the weapon’s range and there is a path large enough for the arrow to travel to the target, the target must make a Dexterity saving throw. On a failed save, it 
                           takes damage as if it were hit by the arrow, plus an extra 1d6 force damage, and you learn the target’s current location. On a successful save, the target takes half as much damage, and you don’t learn 
                           its location.
-         - Shadow Arrow: You weave illusion magic into your arrow, causing it to occlude your foe’s vision with shadows. The creature hit by the arrow takes an extra 2d6 psychic damage, and it must succeed on a Wisdom saving 
+          Shadow Arrow: You weave illusion magic into your arrow, causing it to occlude your foe’s vision with shadows. The creature hit by the arrow takes an extra 2d6 psychic damage, and it must succeed on a Wisdom saving 
                          throw or be unable to see anything farther than 5 feet away until the start of your next turn 
-         - Bursting Arrow: You imbue your arrow with force energy drawn from the school of evocation. The arrow detonates after your attack. Immediately after the arrow hits the creature, the target and all other creatures 
-                           within 10 feet of it take 2d6 force damage each                         
-       - Magic Arrow: Whenever he fires a nonmagical arrow from a shortbow or longbow, he can make it magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage. The magic fades from the 
-                      arrow immediately after it hits or misses its target.
-       - Curving Shot:  When making an attack roll with a magic arrow and miss, he can use a bonus action to reroll the attack roll against a different target within 60 feet of the original target      
+          Bursting Arrow: You imbue your arrow with force energy drawn from the school of evocation. The arrow detonates after your attack. Immediately after the arrow hits the creature, the target and all other creatures 
+                          within 10 feet of it take 2d6 force damage each                         
+        Magic Arrow: Whenever he fires a nonmagical arrow from a shortbow or longbow, he can make it magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage. The magic fades from the 
+                     arrow immediately after it hits or misses its target.
+        Curving Shot:  When making an attack roll with a magic arrow and miss, he can use a bonus action to reroll the attack roll against a different target within 60 feet of the original target      
        
 
     special-abilities:
@@ -546,17 +547,3 @@ npc:
   - uncategorized_template_3: TEMPLATE
 ---
 
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
