Fixing Syntax - Basil Dumas

--- a/npcs/Basil_Dumas.yaml
+++ b/npcs/Basil_Dumas.yaml
@@ -362,7 +362,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  \"So you'd like to borrow some money?\" Says the small, weasely, balding man behind the carved oak banker\'s desk 
+    introduction:  \"So you'd like to borrow some money?\" Says the small, weasely, balding man behind the carved oak banker's desk 
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -389,7 +389,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  How is your credit?; I might be able to arrange something if you'd perhaps be willing to do a favor for my family
+    expressions:  \"How is your credit?\"; \"I might be able to arrange something if you'd perhaps be willing to do a favor for my family\"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
