Fixing syntax - Beach

--- a/npcs/Beach.yaml
+++ b/npcs/Beach.yaml
@@ -362,7 +362,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A dignified gentleman orc with an upturned nose eyes the party from the gate of a well-to-do mansion.
+    introduction:  A dignified gentleman orc with an upturned nose eyes the party from the gate of a welltodo mansion.
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -373,7 +373,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Black long-tailed tuxedo, white gloves and socks; brown skin, mottled with rust
+    appearance:  Black long-tailed tuxedo, white gloves and socks; brown skin, mottled with rust
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -402,7 +402,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Strokes chin ponderously, eyes rolled back; wipes the ground with his handkerchief after people have stepped on it
+    mannerisms:  Strokes chin ponderously, eyes rolled back; wipes the ground with his handkerchief after people have stepped on it
 
   acting:
     #
@@ -466,7 +466,7 @@ npc:
   specialties:
     skills:
     - Desert Orc Abilities:
-       - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
         Aggressive: As a bonus action, you can move up to your speed toward an enemy of your choice that you can see or hear. You must end this move closer to the enemy than you started
         Primal Intuition: Proficient in Insight and Survival
         Powerful Build: count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
@@ -474,9 +474,9 @@ npc:
     
       Rogue Abilities:
       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-         Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-         Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-         Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage       
+        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage       
 
       Assassin Abilities:
       - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit       
@@ -511,5 +511,3 @@ npc:
       deep blues eyes and saw a nimble, dedicated soul; much different from the ferocious hatred he'd seen in his battles against raid-parties. "No," Amin exclaimed, "this one is different. 
       And we needn't fall victim to the same virulent hatred that afflicts the Orcs." Amin brought Ukhtor with him for the journey. Staring into his sea-blue eyes he pronounced that the youngster be named 'Beach'. 
       Raised within the Constabulary's ranks, Beach learned skills more akin to his natural abilities and became an agile killer. He was also imbued with their sense of noblility and respect.
-
-   
