--- a/npcs/baruvo.yaml
+++ b/npcs/baruvo.yaml
@@ -474,13 +474,13 @@ npc:
                       his equine legs. When he make such a climb, each foot of movement costs him 4 extra feet, instead of the normal 1 extra foot
         Survivor: Proficiency in Survival           
     
-    - Fighter Abilities:
+      Fighter Abilities:
       - Fighting Style: Archery - gains a +2 bonus to Attack Rolls made with Ranged Weapons
         Second Wind: Bonus Action to regain 1d10 + 5
         Action Surge: Once every short/long rest can take an extra action
         Extra Attack: Can attack twice each turn
  
-    - Arcane Archer Abilities:
+      Arcane Archer Abilities:
       - Arcane Archer Lore: Proficient in Nature and knows the Druidcraft cantrip
         Arcane Shot: 
         - Description: Knows 3 Arcane Shots
