Fixing Syntax - Anastasia Dumas - White Space

--- a/npcs/Beach.yaml
+++ b/npcs/Beach.yaml
@@ -362,7 +362,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A dignified gentleman orc with an upturned nose eyes the party from the gate of a welltodo mansion.
+    introduction:  A dignified gentleman orc with an upturned nose eyes the party from the gate of a well-to-do mansion.
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -430,7 +430,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      efuses to create a scene among the nobler classes, so will go to extraordinary lengths to delay or cover up a conflict
+      Refuses to create a scene among the nobler classes, so will go to extraordinary lengths to delay or cover up a conflict
       
     #
     # Secrets:
@@ -479,8 +479,7 @@ npc:
         Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage       
 
       Assassin Abilities:
-      - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit       
-       
+      - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
 
     special-abilities:
     - Proficiencies: Cooking, Mixology, Disguise Kit, Poisoner's Kit, Stealth, Insight, Survival, Thieve's Tools, Sleight of Hand    
@@ -489,7 +488,7 @@ npc:
     combat-tactics: |
       If combat erupts, Beach appears to flee but instead is actually finding the best shadows from which to strike
     special-equipment:
-    - Assassin's Dagger (+1); When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take 4d6 necrotic damage
+    - Assassin's Dagger (+1) - When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take 4d6 necrotic damage
     - Hidden Blade (1d4 piercing, finesse)
     - Burleigh and Stronginthearm Number IX - a +3 precise crossbow; only 2 were ever made
                                                                    
