--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -481,8 +481,7 @@ npc:
         Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
 
       Assassin Abilities:
-      - Assassinate: 
-        - Description: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
+      - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
 
     special-abilities:
     - Proficiencies: 
