--- a/npcs/Beach.yaml
+++ b/npcs/Beach.yaml
@@ -19,6 +19,11 @@
 #     field: |
 #       <p> Gorbonzonger the goblin is a very bad goblin.
 #       He likes to beat up kobolds. </p>
+#       <p class="small"> Kobolds deserve it, anyway. </p>
+#       <p> Gorbonzonger has an amulet made of camphor
+#       and a very long shopping list that contains many
+#       items, some very few of which include: </p>
+#       <ul>
 #       <li> toilet paper </li>
 #       <li> broccoli </li>
 #       </ul>
