--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -342,7 +342,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: A withered elderly woman glares across the courtyard, "Have you decided to join our little family, dearies?"
+    introduction: A .withered elderly woman glares across the courtyard, "Have you decided to join our little family, dearies?"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
