Conversion test - new repo locally

--- a/npcs/albrecht_mukht.yaml
+++ b/npcs/albrecht_mukht.yaml
@@ -1,5 +1,5 @@
 ﻿#
-# Vibrant Games NPC file format.
+# Vibrant Games NPC file format. - Conversion test
 #
 # For long fields, we should be able to embed <html-tag>...</html-tag>s,
 # if everyone is cool with that approach.  OR we could use markdown instead.
